issue fixed with navbar colour contrast and changed to more better colour which can be better

--- a/styles/before-main.css
+++ b/styles/before-main.css
@@ -86,7 +86,7 @@ a:hover, a:focus, input:focus {
 }
 
 
-.navbar-dark .navbar-nav .nav-link {
+.nav-link {
   color: #ffffff; 
 }
 
